<resources>
    <!--    Application-->
    <string name="app_name">Eventure</string>

    <!--    Welcome Screen-->
    <string name="welcome_title">Welcome to Eventure</string>
    <string name="welcome_desc">Join us to explore event around you</string>

    <!--    Register and Login-->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_to_register_text">Don\'t have an account?</string>
    <string name="register_to_login_text">Already have account?</string>

    <!--    Forms-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--    Button-->
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>

    <!--    Change Password-->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password_hint">Enter your current password</string>
    <string name="new_password_hint">Enter new password</string>
    <string name="confirm_password_hint">Re-enter new password current password</string>

    <!--    Identity Verification-->
    <string name="nik_company">NIK/Company Name</string>
    <string name="no_kk">No.KK/No.SK</string>
    <string name="confirm">Confirm</string>

    <!--   Email Verification-->
    <string name="check_email">Check Your Email</string>
    <string name="verification_code">Your Verification Code</string>
    <string name="verify">Verify</string>

    <!--    Create Event-->
    <string name="category">Category</string>
    <string name="category_hint">Choose category</string>
    <string name="category_image_description">Category Image Description</string>
    <string name="category_text">Choose category based on your interest</string>
    <string-array name="category_list">
        <item>Select Category</item>
    </string-array>
    <string name="choose_event">Choose event that you may like or interested in</string>
    <string name="create_post">Create Post</string>
    <string name="upload">Upload</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Description</string>
    <string name="event_location">Location</string>
    <string name="full_address">Full Address</string>
    <string name="event_date">Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="event_time">Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="event_origin_link">Origin Link</string>
    <string name="event_origin_link_example">e.g. social media, website, etc.</string>
    <string name="next">Next</string>
    <string name="post">post</string>
    <string name="city">City</string>

    <!--    Dashboard -->
    <string name="title_activity_dashboard">DashboardActivity</string>

    <!--    Explorer -->
    <string name="explorer">Explorer</string>
    <string name="slogan">Your Event Adventure</string>
    <string name="searchbar_hint">Search event, categories, location</string>
    <string name="no_location_alert">We cannot find your location, please allow location</string>
    <string name="allow_location">allow location</string>

    <!--    Maps -->
    <string name="maps">Maps</string>

    <!--    Saved Event-->
    <string name="saved">Saved</string>
    <string name="upcoming">Upcoming</string>
    <string name="past_event">Past Event</string>

    <!--    Profile -->
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_post">My Post</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="language">language</string>
    <string name="dark_mode">dark mode</string>
    <string name="notifications">notifications</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="profile_update_success_message">Your profile has been updated successfully.</string>
    <string name="ok">OK</string>
    <string name="loading">loading…</string>

    <!--    Detail -->
    <string name="map">Map</string>
    <string name="info">Info</string>
    <string name="detail">Detail</string>
    <string name="description">Description</string>

    <!--    Alert Message-->
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>