<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.change_password.ChangePasswordActivity">

    <TextView
        android:id="@+id/tvChangePasswordOld"
        style="@style/Text.Body.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/current_password"
        android:layout_marginTop="36dp"
        android:layout_marginStart="32dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePasswordOldLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvChangePasswordOld"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordOld"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePasswordOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password_hint"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvChangePasswordNew"
        style="@style/Text.Body.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordOldLayout" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePasswordNewLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvChangePasswordNew"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordNew"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePasswordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_hint"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvChangePasswordConfirm"
        style="@style/Text.Body.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordNewLayout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePasswordConfirmLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvChangePasswordConfirm"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordConfirm"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangePasswordSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:alpha="0"
        android:text="@string/save"
        app:cornerRadius="12dp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordConfirmLayout"
        tools:alpha="100" />

</androidx.constraintlayout.widget.ConstraintLayout>