<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.create_event.form.FormAddEventFragment"
>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCreatePost"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivCreatePost"
            android:contentDescription="@string/create_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/no_image"
            android:scaleType="centerCrop"
            />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpload"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="100"
        android:elevation="4dp"
        android:text="@string/upload"
        app:strokeColor="@color/black"
        app:strokeWidth="0.3dp"
        app:cornerRadius="12dp"
        android:padding="10dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCreatePost"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvEventName"
        style="@style/Text.Body.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpload" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventNameTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="100"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvEventName"
        app:layout_constraintTop_toBottomOf="@+id/tvEventName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvCategory"
        style="@style/Text.Body.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryDropDownLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="100"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvCategory"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/categoryDropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="12dp"
            android:textSize="12sp"
            android:inputType="none"
            android:hint="@string/category_hint"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDescription"
        style="@style/Text.Body.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_description"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryDropDownLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventDescriptionTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="100"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:ems="10"
            android:hint="@string/event_description"
            android:padding="16dp"
            android:textSize="12sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvLocation"
        style="@style/Text.Body.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_location"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDescriptionTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventLocationCityTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="100"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventLocationCityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventLocationAddressTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="100"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvLocation"
        app:layout_constraintTop_toBottomOf="@id/eventLocationCityTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventLocationAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_address"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDate"
        style="@style/Text.Body.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventLocationAddressTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventStartDateTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="100"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventStartDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="none"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvOriginLink"
        style="@style/Text.Body.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_origin_link"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventStartDateTextLayout" />

    <TextView
        android:id="@+id/tvOriginLinkExample"
        style="@style/Text.Body.XSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_origin_link_example"
        android:textColor="@color/grey_15"
        android:alpha="100"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/tvOriginLink"
        app:layout_constraintTop_toTopOf="@+id/tvOriginLink"
        app:layout_constraintBottom_toBottomOf="@id/tvOriginLink" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventLinkTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="100"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvOriginLink"
        app:layout_constraintTop_toBottomOf="@+id/tvOriginLink">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventLinkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_origin_link"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="48dp"
        android:elevation="4dp"
        android:text="@string/next"
        app:cornerRadius="12dp"
        android:textSize="14sp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventLinkTextLayout"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>